# memory-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: orchestration-plan.md
src/memory_mcp/: config.py  mcp_tools.py  migrate.py  server.py  store.py  telemetry.py  ui.py
src/memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/memory_mcp/templates/: base.html  index.html  memory.html
tests/: test_config.py  test_migrate.py  test_server.py  test_staleness.py  test_store.py
